[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["amansalwan <amansalwan1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
nltk = "^3.8.1"
tensorflow = "2.10"
tflearn = "^0.5.0"
windows-curses = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
